cmake_minimum_required(VERSION 3.5.1) 
project(SolveSVP_v2)  
set(CMAKE_CXX_STANDARD 17) 
#add_library(MyLibrary LatticeUtil.cpp ListSieve.cpp RandomTools.cpp Util.cpp YamlTools.cpp ExperimentTools.cpp)
include_directories(/usr/include/c++/11/volesti /usr/include/c++/11/lp_solve-master /usr/include/c++/11/external /usr/include/c++/11/ifopt-master/ifopt_core/include /usr/include/c++/11/ifopt-master/ifopt_ipopt/include /usr/include/c++/11/MPsolve-master/include /usr/include/c++/11/fftw3-master/fftw3-master/api)
link_directories(/usr/local/lib)
link_libraries(-lyaml-cpp -lboost_random -I/usr/include/python3.10 -lpython3.10 -llpsolve55)
add_executable(a.out Solve.cpp LatticeUtil.cpp ListSieve.cpp RandomTools.cpp Util.cpp YamlTools.cpp ExperimentTools.cpp GaussSieve.cpp)
#target_compile_options(a.out PUBLIC -g -O0 -o)
